--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,14 @@
-// {
-//   "extends": "next/core-web-vitals"
-// }
-
 {
   "extends": "next/core-web-vitals",
   "rules": {
     "react-hooks/exhaustive-deps": "off", // Disable exhaustive-deps rule
     "react/prop-types": "off", // Disable prop-types rule if you're using TypeScript or don't need it
-    "no-console": "off", // This will disable the no-console rule
-    "next/no-img-element": "off",
-    "react/no-unescaped-entities": "off"
+    "no-console": "off", // Disable the no-console rule
+    "next/no-img-element": "off", // Disable the next image element rule
+    "react/no-unescaped-entities": "off", // Disable unescaped entities rule
+    "@typescript-eslint/no-unused-vars": "off", // Disable unused variables rule for TypeScript
+    "@typescript-eslint/no-explicit-any": "off", // Disable explicit any type warning
+    "@typescript-eslint/no-empty-function": "off", // Disable empty function warning
+    "@typescript-eslint/no-empty-interface": "off" // Disable empty interface warning
   }
 }
