--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,24 @@
 {
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
+    "allowJs": true, // Allow JavaScript files to be compiled
+    "skipLibCheck": true, // Skip type checking for declaration files
+    "strict": false, // Disable all strict type-checking options
+    "noEmit": true, // Do not emit output
+    "esModuleInterop": true, // Enable emit interoperability between CommonJS and ES Modules
+    "module": "esnext", // Specify module code generation
+    "moduleResolution": "bundler", // Use bundler strategy for module resolution
+    "resolveJsonModule": true, // Include modules imported with .json extension
+    "isolatedModules": true, // Ensure each file can be transpiled independently
+    "jsx": "preserve", // Preserve JSX as-is
+    "incremental": true, // Enable incremental compilation
     "plugins": [
       {
-        "name": "next"
+        "name": "next" // Next.js plugin for TypeScript
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"] // Alias for easier imports
     }
   },
   "include": [
@@ -30,5 +30,5 @@
     ".next/types/app/signin/page.tsx",
     "src/app/adminPage/UsersControllers"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"] // Exclude node_modules folder
 }
